--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">Nothern Virginia Community College</h3>
+            <h3 class="mb-0">Northern Virginia Community College</h3>
             <div class="subheading mb-3">Associates of Science</div>
             <div>Computer Science</div>
           </div>
